# w3dhub_gltf_to_w3d

./: .gitmodules  CMakeLists.txt  main.cpp
.github/workflows/: cmake-multi-platform.yml
include/: w3d_hierarchy_model.h  w3d_mesh.h  w3d_pivot.h
src/: w3d_hierarchy_model.cpp  w3d_mesh.cpp
